# mouton

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run_clang_format.sh
Editor/: CMakeLists.txt  CameraBehaviour.py  RedSprite.py  RedSpriteScript.py  defaultScene.mtnscn  scene.mtnscn
Editor/.PythonBehaviourScriptsTemplates/: OrthographicCameraScriptTemplate.mtnt  SpriteComponentScriptTemplate.mtnt
Editor/Projects/: Project.md
Editor/res/models/House/source/: abandoned-brick-house-with-green-wood.mtl
Editor/res/shaders/: 3DShader.glsl  basicShader.glsl  textureShader.glsl
Editor/src/: BarMenu.cpp  BarMenu.h  CMakeLists.txt  Editor.cpp  EditorLayer.cpp  EditorLayer.h  EditorPropertiesPanels.cpp  EditorPropertiesPanels.h  Logger.cpp  Logger.h  SceneExplorer.cpp  SceneExplorer.h
Mouton/: CMakeLists.txt
Mouton/src/: ApplicationLayer.h  ApplicationLayers.cpp  CMakeLists.txt  Engine.cpp  Engine.h  ImGuiLayer.cpp  ImGuiLayer.h  MoutonPch.cpp  MoutonPch.h
Mouton/src/Core/: Engine.cpp  Engine.h  Inputs.cpp  Inputs.h  Log.cpp  Log.h  MoutonCore.h  Timestep.cpp  Timestep.h
Mouton/src/Core/Events/: ApplicationEvents.h  Events.cpp  Events.h  KeyEvents.cpp  KeyEvents.h  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
Mouton/src/Core/Utils/: FileUtils.cpp  FileUtils.h  SerializationUtils.cpp  SerializationUtils.h  StringHash.cpp  StringHash.h
Mouton/src/Ecs/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Mouton/src/MoutonComponents/: Material2DComponent.cpp  Material2DComponent.h  OrthographicCameraComponent.cpp  OrthographicCameraComponent.h  PythonBehaviourComponent.cpp  PythonBehaviourComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
Mouton/src/Platform/: GLFWInputs.cpp  GLFWInputs.h  GLFWWindow.cpp  GLFWWindow.h  Keycodes.h  MoutonOpenGLImGui.h  MoutonOpenGLImgui.cpp
Mouton/src/Platform/Assimp/: AssimpModelLoader.cpp  AssimpModelLoader.h  AssimpSceneLoader.cpp  AssimpSceneLoader.h
Mouton/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffers.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderCommand.cpp  OpenGLRenderCommand.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Mouton/src/Platform/imguiImplementation/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Mouton/src/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicContext.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  OrbitalCameraController.cpp  OrbitalCameraController.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererContext.cpp  RendererContext.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
Mouton/src/Renderer/Animations/: Animation.cpp  Animation.h  Bone.cpp  Bone.h  KeyFrame.cpp  KeyFrame.h
Mouton/src/Scripting/: ElementBehaviour.cpp  ElementBehaviour.h  InternalTypesUtilities.cpp  InternalTypesUtilities.h  PythonBehaviourBinder.cpp  PythonBehaviourBinder.h  PythonCoreAPI.cpp  PythonCoreAPI.h  PythonInternalTypesMathUtils.cpp  PythonInternalTypesMathUtils.h  PythonScriptEngine.cpp  PythonScriptEngine.h  ScriptSkeletonFactory.cpp  ScriptSkeletonFactory.h
Sandbox/: CMakeLists.txt  myComp.py
Sandbox/res/models/biped-robot/source/: Animation.fbx
Sandbox/res/models/shark/: White_Shark.dae
Sandbox/res/models/shark/source/: White_Shark.blend
Sandbox/res/shaders/: 2DRendererShader.glsl  3DAnimatedShader.glsl  basicShader.glsl  textureShader.glsl
Sandbox/src/: CMakeLists.txt  Sandbox.cpp  SandboxLayer.cpp  SandboxLayer.h
